--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -10,14 +10,29 @@
     flex-direction: column;
   }
 
+  @include mobile {
+    margin-bottom: 80px;
+    flex-direction: column;
+  }
+
   &__top {
     display: flex;
+
+    @include mobile {
+      display: block;
+    }
   }
 
   &__icons {
     display: flex;
     flex-direction: column;
     gap: 62px;
+
+    @include mobile {
+      flex-direction: row;
+      justify-content: space-between;
+      margin-bottom: 40px;
+    }
   }
 
   &__socials {
@@ -37,6 +52,10 @@
       @include tablet {
         transform: none;
       }
+
+      @include mobile {
+        transform: none;
+      }
     }
   }
 
@@ -45,6 +64,10 @@
 
     @include tablet {
       width: 220px;
+    }
+
+    @include mobile {
+      width: 130px;
     }
   }
 
@@ -62,6 +85,9 @@
     @include tablet {
       width: 220px;
     }
+    @include mobile {
+      width: 130px;
+    }
   }
 
   &__data {
@@ -75,6 +101,13 @@
       padding-left: 40px;
       margin-bottom: 64px;
     }
+
+    @include mobile {
+      padding:0;
+      justify-content: space-between;
+      font-weight: 400;
+      font-size: 14px;
+    }
   }
 
   &__line {
@@ -87,6 +120,12 @@
       width: 460px;
       margin: auto;
     }
+
+    @include mobile {
+      height: 0;
+      width: 100%;
+      margin: 70px 0 40px;
+    }
   }
 
   &__links {
@@ -97,6 +136,10 @@
     @include tablet {
       padding: 64px 0 120px;
       margin: auto;
+    }
+
+    @include mobile {
+      padding-left: 0;
     }
   }
 
@@ -133,5 +176,27 @@
     @include tablet {
       padding: 0 35px 35px;
     }
+
+    @include mobile {
+      flex-direction: column-reverse;
+      gap: 10px;
+      align-items: center;
+    }
+  }
+
+  &__circle {
+
+    @include mobile {
+      position: absolute;
+      bottom: 280px;
+      right: 20px;
+      display: block;
+      width: 50px;
+      height: 50px;
+      border: 1px solid $menu-color;
+      border-radius: 50%;
+      background: url(../images/icons/Vector1.png) center no-repeat;
+    }
+
   }
 }
