--- a/src/styles/subscription.scss
+++ b/src/styles/subscription.scss
@@ -11,6 +11,13 @@
     padding: 82px 154px;
   }
 
+  @include mobile {
+    padding: 88px 20px;
+    margin-bottom: 50px;
+    background-image: url(../images/gallery/form-background-mobile.png);
+
+  }
+
   &__title {
     color: #fff;
     margin-bottom: 16px;
@@ -35,6 +42,10 @@
     @include tablet {
       gap: 16px;
     }
+
+    @include mobile {
+      gap: 0;
+    }
   }
 
   &__input {
@@ -52,6 +63,11 @@
 
     @include tablet {
       width: 374px;
+    }
+
+    @include mobile {
+      height: 50px;
+      width: 100%;
     }
   }
 
@@ -73,6 +89,11 @@
         background: none;
         border: none;
       }
+    }
+
+    @include mobile {
+      height: 50px;
+      width: 50px;
     }
   }
 }
