--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -11,11 +11,23 @@
     gap: 20px;
   }
 
+  @include mobile {
+    flex-direction: column;
+    width: 100%;
+    padding-left: 0;
+    gap: 20px;
+    margin-bottom: 70px;
+  }
+
   &_background {
     width: 725px;
 
     @include tablet {
       width: 50%;
+    }
+
+    @include mobile {
+      width: 100%;
     }
   }
 
@@ -33,6 +45,12 @@
     @include tablet {
       transform: translateX(0);
       width: 220px;
+    }
+
+    @include mobile {
+      top: 9px;
+      width: 55px;
+      height: 61px;
     }
   }
 
@@ -52,13 +70,21 @@
       transform: scale(1.2);
 
       @include tablet {
-        transform: scale none;
+        transform: none;
+      }
+      @include mobile {
+        transform: none;
       }
     }
 
     @include tablet {
       left: 37px;
       top: 45px;
+    }
+
+    @include mobile {
+      left: 23px;
+      top: 33px;
     }
   }
 
@@ -72,6 +98,20 @@
       font-size: 54px;
       padding: 127px 0 38px;
     }
+
+    @include mobile {
+      padding: 0;
+      font-size: 45px;
+      line-height: 100%;
+      margin-bottom: 20px;
+      text-align: center;
+    }
+  }
+
+  &__block {
+    @include mobile {
+      padding: 0 20px;
+    }
   }
 
   &_ticket {
@@ -81,6 +121,12 @@
     @include tablet {
       padding-left: 0;
       width: 270px;
+    }
+
+    @include mobile {
+      padding: 0;
+      font-size: 45px;
+      line-height: 100%;
     }
   }
 
@@ -102,6 +148,16 @@
         background: none;
         border: none;
       }
+
+      @include mobile {
+        background: none;
+        border: none;
+      }
+    }
+
+    @include mobile {
+      width: 50px;
+      height: 50px;
     }
   }
 
@@ -115,5 +171,9 @@
     font-weight: 500;
     font-size: 16px;
     line-height: 100%;
+
+    @include mobile {
+      height: 50px;
+    }
   }
 }
