--- a/src/styles/page.scss
+++ b/src/styles/page.scss
@@ -1,10 +1,14 @@
-.page {
+.page{
   max-width: 1280px;
   margin: auto;
   position: relative;
 
   @include tablet {
     max-width: 768px;
+  }
+
+  @include mobile {
+    width: 100%;
   }
 
   &__backdrop {
@@ -21,6 +25,10 @@
     @include tablet {
       max-width: 768px;
     }
+
+    @include mobile {
+      width: 100%;
+    }
   }
 
   &__menu {
@@ -36,6 +44,13 @@
       max-width: 768px;
       padding: 40px 35px 40px 96px;
       gap: 38px;
+    }
+
+
+    @include mobile {
+      width: 100%;
+      padding: 20px 27px;
+      display: block;
     }
   }
 
@@ -57,11 +72,20 @@
       @include tablet {
         transform: none;
       }
+
+      @include mobile {
+        transform: none;
+      }
     }
 
     @include tablet {
       left: 40px;
       top: 45px;
+    }
+
+    @include mobile {
+      left: 25px;
+      top: 32px;
     }
   }
 
@@ -75,6 +99,14 @@
     @include tablet {
       gap: 20px;
       font-size: 16px;
+
+    }
+
+    @include mobile {
+      gap: 28px;
+      font-size: 16px;
+      margin: auto;
+      padding: 27px 0 24px 72px;
     }
   }
 
@@ -88,9 +120,17 @@
       @include tablet {
         text-decoration: none;
       }
+
+      @include mobile {
+        text-decoration: none;
+      }
     }
 
     @include tablet {
+      width: 100px;
+    }
+
+    @include mobile {
       width: 100px;
     }
   }
@@ -99,6 +139,11 @@
     height: 145px;
     margin: 0;
 
+    @include mobile {
+      height: 0px;
+      width: 100%;
+      margin: 0;
+    }
   }
 
   &__items {
@@ -108,6 +153,11 @@
     width: 168px;
 
     @include tablet {
+      gap: 24px;
+      width: 100px;
+    }
+
+    @include mobile {
       gap: 24px;
       width: 100px;
     }
@@ -123,6 +173,12 @@
     @include tablet {
       gap: 38px;
     }
+
+    @include mobile {
+      gap: 16px;
+      width: 280px;
+      flex-direction: column;
+    }
   }
 
   &__graph {
@@ -130,7 +186,14 @@
     font-size: 14px;
     line-height: 140.62%;
     margin-bottom: 20px;
+
+    @include mobile {
+      line-height: 150%;
+      margin-bottom: 16px;
+    }
   }
+
+
 
   &__time-work {
     width: 170px;
@@ -138,6 +201,7 @@
     @include tablet {
       width: 159px;
     }
+
   }
 
   &__holiday {
@@ -145,6 +209,16 @@
 
     @include tablet {
       width: 159px;
+    }
+
+    @include mobile {
+      width: 280px;
+    }
+  }
+
+  &__right {
+    @include mobile {
+      padding-top: 24px;
     }
   }
 }
