--- a/src/styles/utils/_utility.scss
+++ b/src/styles/utils/_utility.scss
@@ -13,6 +13,10 @@ html {
     padding: 0 35px;
   }
 
+  @include mobile {
+    padding: 0 20px;
+  }
+
 }
 
 * {
@@ -21,14 +25,28 @@ html {
 
 .title {
   font-weight: 700;
-  font-size: 48px;
-  line-height: 100%;
+  font-size: 72px;
+  line-height: 120%;
+
+  @include tablet {
+    font-size: 54px;
+  }
+
+  @include mobile {
+    font-size: 36px;
+    line-height: 100%;
+    text-align: center;
+  }
 }
 
 .tile3 {
   font-weight: 400;
   font-size: 36px;
   line-height: 100%;
+
+  @include mobile {
+    font-size: 28px;
+  }
 }
 
 .title,
