--- a/src/styles/utils/_gallery.scss
+++ b/src/styles/utils/_gallery.scss
@@ -69,12 +69,12 @@
 
     @include onTablet {
       width: 100%;
-      // height: 543px;
       margin-bottom: 32px;
     }
 
     @include onDesktop {
       background-size: cover;
+      margin-bottom: 0;
       width: 100%;
       height: 600px;
       transition: transform 300ms;
@@ -93,7 +93,7 @@
       }
 
       @include onDesktop {
-        // height: fit-content;
+        height: 600px;
       }
     }
   }
