add task solution

--- a/src/styles/events.scss
+++ b/src/styles/events.scss
@@ -11,6 +11,7 @@
 
   @include mobile {
     gap: 40px;
+    margin-bottom: 60px;
   }
 
   &__before {
@@ -89,7 +90,7 @@
     padding: 30px 0 15px;
 
     @include mobile {
-     padding: 10px 0;
+      padding: 10px 0;
     }
   }
 
@@ -99,20 +100,20 @@
     @include tablet {
       width: 460px;
     }
+
     @include mobile {
-      width:  100%
-     }
+      width: 100%;
+    }
   }
 
   &__exhibition-block {
     display: flex;
     align-items: center;
-    justify-content: space-between;
     gap: 20px;
 
     @include mobile {
-      padding: 0 20px;
-     }
+justify-content: space-between;
+    }
   }
 
   &__exhibition {
@@ -123,7 +124,7 @@
 
     @include mobile {
       font-size: 16px;
-     }
+    }
   }
 
   &__link {
@@ -134,7 +135,7 @@
 
     @include mobile {
       font-size: 16px;
-     }
+    }
   }
 
   &__square {
@@ -169,7 +170,7 @@
       height: 0;
       padding-top: calc(210 / 320 * 100%);
       margin-bottom: 183px;
-     }
+    }
   }
 
   &__description-card {
@@ -199,8 +200,6 @@
       left: 50%;
       top: 100%;
       transform: translateY(-35%) translateX(-50%);
-
-     }
+    }
   }
 }
-
