--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -73,6 +73,10 @@
 
   &__title {
     padding-bottom: 20px;
+
+    @include tablet {
+      font-weight: 400;
+    }
   }
 
   &__time-work {
@@ -103,7 +107,7 @@
     }
 
     @include mobile {
-      padding:0;
+      padding: 0;
       justify-content: space-between;
       font-weight: 400;
       font-size: 14px;
@@ -113,6 +117,7 @@
   &__line {
     height: 260px;
     margin: 0;
+    background-color: $menu-color;
 
     @include tablet {
       transform: rotateY(180deg);
@@ -134,7 +139,7 @@
     padding-left: 65px;
 
     @include tablet {
-      padding: 64px 0 120px;
+      padding-top: 64px;
       margin: auto;
     }
 
