add task solution

--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -73,10 +73,7 @@
 
   &__title {
     padding-bottom: 20px;
-
-    @include tablet {
-      font-weight: 400;
-    }
+    font-weight: 400;
   }
 
   &__time-work {
@@ -85,6 +82,7 @@
 
   &__contacts {
     width: 170px;
+    font-weight: 400;
 
     @include tablet {
       width: 220px;
@@ -135,6 +133,7 @@
 
   &__links {
     display: flex;
+    font-weight: 400;
     gap: 32px;
     padding-left: 65px;
 
@@ -146,6 +145,10 @@
     @include mobile {
       padding-left: 0;
     }
+  }
+
+  &__holiday {
+    font-weight: 600;
   }
 
   &__link {
