finised header and 70% of menu

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,12 @@
 @import "utils";
 @import "fonts";
 @import "typography";
+@import "./utils/normalize";
+@import "./utils/vars";
+@import "./blocks/container";
+@import "./blocks/icon.scss";
+@import "./blocks/page.scss";
 
-body {
-  background: $c-gray;
-}
+@import "./header/header";
+@import "./blocks/menu";
+@import "./blocks/nav";
