without menu and slider

--- a/src/styles/blocks/_events.scss
+++ b/src/styles/blocks/_events.scss
@@ -2,17 +2,22 @@
 @import "card";
 
 .events {
+
   &__title {
     grid-column: 1/3;
     font-weight: 700;
     font-size: 36px;
     line-height: 100%;
     text-align: center;
+    width: 320px;
+    padding: 0 20px;
 
     @media (min-width: 768px) {
       grid-column: 1/8;
       font-size: 48px;
       text-align: left;
+      padding: 0 39px;
+      width: auto;
     }
   }
 
