--- a/src/styles/blocks/_card.scss
+++ b/src/styles/blocks/_card.scss
@@ -3,17 +3,20 @@
   grid-template-columns: repeat(2, 130px);
   gap: 20px;
   margin: 0 auto;
-
+  padding: 0 20px;
   justify-content: center;
 
   @media (min-width: 768px) {
     grid-template-columns: repeat(6, 90px);
     gap: 30px;
+    padding: 0 39px;
   }
 
   @media (min-width: 1280px) {
     grid-template-columns: repeat(12, 70px);
     grid-template-rows: repeat(7, auto);
+    padding: 0 55px;
+
   }
 
   .card__img {
