--- a/src/styles/blocks/_gallery.scss
+++ b/src/styles/blocks/_gallery.scss
@@ -1,4 +1,14 @@
 .gallery {
+  &__container {
+    padding: 0 20px;
+    @media (min-width: 768px) {
+      padding: 0 39px;
+    }
+    @media (min-width: 1280px) {
+      padding: 0 55px;
+    }
+  }
+
   &__title {
     font-weight: 700;
     line-height: 100%;
@@ -71,6 +81,6 @@
 
   &__box {
     grid-column: 1/3;
-    padding: 0 55px 200px;
+    padding: 0 0 200px;
   }
 }
