--- a/src/styles/blocks/buy-btn.scss
+++ b/src/styles/blocks/buy-btn.scss
@@ -14,6 +14,7 @@
   }
 
   &__title {
+    font-family: "IBM Plex Sans", sans-serif;
     height: 100%;
     width: calc(100% - 50px);
     display: flex;
