--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -57,6 +57,7 @@
 
   &__link {
     text-decoration: none;
+    font-family: "IBM Plex Sans", sans-serif;
     font-style: normal;
     font-weight: 500;
     font-size: 16px;
