--- a/src/styles/blocks/actual.scss
+++ b/src/styles/blocks/actual.scss
@@ -15,6 +15,11 @@
 
   &__img {
     width: 100%;
+
+    &:hover {
+      transition: transform ease 0.3s;
+      transform: scale(1.1);
+    }
   }
 
   &__data {
