--- a/src/styles/blocks/form.scss
+++ b/src/styles/blocks/form.scss
@@ -19,5 +19,10 @@
     box-sizing: border-box;
     outline: none;
     border: none;
+
+    &::placeholder {
+      font-family: "Montserrat", sans-serif;
+      font-weight: 400;
+    }
   }
 }
