add task solution

--- a/src/styles/events.scss
+++ b/src/styles/events.scss
@@ -113,6 +113,11 @@
 
     @include mobile {
       justify-content: space-between;
+    }
+  }
+
+  &__exhibition-block-top {
+    @include mobile {
       padding: 0 20px;
     }
   }
