finished header/ menu and 30% of main

--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -1,3 +1,24 @@
-h1 {
-  @extend %h1;
+h1,
+h2,
+h3 {
+  font-family: 'Montserrat', sans-serif;
+}
+
+h1,
+h2 {
+  font-weight: 700;
+}
+
+h2 {
+  font-size: 36px;
+  line-height: 100%;
+color: #0F0E08;
+  @include onTablet {
+    font-size: 48px;
+  }
+}
+
+h3 {
+  font-weight: 400;
+  font-size: 28px;
 }
