--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -1,13 +1,24 @@
 .menu {
-  height: 62.2vh;
+  height: 399px;
   background-color: $green;
   padding-top: 27px;
+  font-family: 'IBM Plex Sans', sans-serif;
   @include onTablet {
     padding-top: 40px;
+    height: 225px;
+  }
+  @include onDesktop {
+    height: 233px;
   }
 
   @include paddingInline;
   @include respGrid;
+
+  &__icon {
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
 }
 
 
