--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,7 @@
 @import "utils";
 @import "fonts";
-@import "typography";
 @import "./utils/normalize";
+@import "typography";
 @import "./utils/vars";
 @import "./blocks/container";
 @import "./blocks/icon.scss";
@@ -10,3 +10,5 @@
 @import "./header/header";
 @import "./blocks/menu";
 @import "./blocks/nav";
+@import "./blocks/main";
+@import "./blocks/section";
