--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -51,20 +51,15 @@
   }
 }
 
-@mixin respRowGrid {
-  --column: 2;
-  display: grid;
-  column-gap: 20px;
-  row-gap: 20px;
-  grid-template-columns: repeat(var(--column), 1fr);
+@mixin subtitle {
+  font-weight: 400;
+  font-size: 28px;
+  line-height: 100%;
+  text-align: left;
+  color: #0F0E08;
 
   @include onTablet {
-    --column: 6;
-    column-gap: 30px;
-  }
-
-  @include onDesktop {
-    --column: 12;
-    column-gap: 30px;
+    font-size: 36px;
   }
 }
+
