--- a/src/styles/blocks/nav.scss
+++ b/src/styles/blocks/nav.scss
@@ -1,9 +1,8 @@
 .nav {
   grid-column: 1 / -1;
-  grid-row: 1;
-
-
+  padding-bottom: 24px;
   @include onTablet {
+    padding-bottom: 0;
     grid-column: 1 / 3;
   }
 
@@ -17,15 +16,15 @@
     flex-wrap: wrap;
     gap: 24px;
     padding-left: 50px;
-    font-size: 16px;
     height: 80px;
 
     @include onTablet {
-      padding-left: 96px;
+      padding-left: 56px;
+      height: 100px;
     }
 
     @include onDesktop {
-      padding-left: 182px;
+      padding-left: 120px;
       gap: 30px;
       height: 120px;
     }
@@ -33,9 +32,9 @@
 
   &__link {
     font-weight: 500;
-    font-size: 16px;
+    font-size: inherit;
     line-height: 100%;
-    color: #FFFFFF;
+    color: #fff;
     display: block;
 
     @include onDesktop {
@@ -47,7 +46,6 @@
 .schedule {
   max-height: 145px;
   grid-column: 1 / -1;
-  margin-top: -65px;
   grid-row: 2;
   padding-top: 24px;
 
@@ -56,20 +54,31 @@
   gap: 20px;
 
   font-size: 14px;
+  line-height: 150%;
   color: white;
   border-top: 1px solid rgba(255, 255, 255, 0.5);
+  position: relative;
 
   @include onTablet {
     margin-top: 0;
     padding-top: 0;
     border-top: none;
-    border-left: 1px solid rgba(255, 255, 255, 0.5);
+
     grid-row: 1;
-    grid-column: 3 / -1;
-    padding-left: 38px;
+    grid-column: 4 / -1;
+
+    &::before {
+      content: "";
+      display: block;
+      position: absolute;
+      height: 100%;
+      width: 1px;
+      background: rgba(255, 255, 255, 0.5);
+      left: -38px;
+    }
   }
   @include onDesktop {
-    grid-column: 5 / -1;
+    grid-column: 7 / 12;
     padding-left: 102px;
   }
 
@@ -82,10 +91,37 @@
       flex-direction: row;
       gap: 38px;
     }
+    @include onDesktop {
+      flex-direction: row;
+      gap: 30px;
+    }
+
+    &>* {
+      width: 280px;
+
+      @include onTablet {
+        width: 144px;
+        height: 105px;
+      }
+
+      @include onDesktop {
+        width: 170px;
+        height: 105px;
+      }
+    }
+  }
+
+  &__work-days {
+    @include onTablet {
+      width: 158px;
+    }
   }
 
   &__weekends {
-    width: 144px;
-    height: 100px;
+    height: 63px;
   }
+}
+
+.bold {
+  font-weight: 600;
 }
