--- a/src/styles/header/header.scss
+++ b/src/styles/header/header.scss
@@ -1,341 +1,3 @@
-/*#region old*/
-// // .wrapper {
-// //   @include respGrid;
-// // }
-// .header {
-//   // &__top-bar {
-//   //   display: flex;
-//   //   align-items: center;
-//   //   @include respGrid;
-
-//   //   &--icon-menu {
-//   //     grid: 1 / 1;
-//   //     display: block;
-//   //     width: 24px;
-//   //     height: 24px;
-//   //     background-image: url(../images/menu.svg);
-//   //   }
-
-//   //   &--logo {
-//   //     grid-column: 1 / 2;
-//   //     @include onTablet {
-//   //       grid-column: 4 / 5;
-//   //     }
-//   //     @include onDesktop {
-//   //       grid-column: 6 / 7;
-//   //     }
-//   //     display: block;
-//   //     font-weight: 700;
-//   //     font-size: 30px;
-//   //     line-height: 100%;
-//   //     color: black;
-//   //     text-decoration: none;
-//   //     text-align: center;
-//   //     text-transform: uppercase;
-//   //     width: 55px;
-//   //     height: 61px;
-
-//   //     @include onTablet {
-//   //       font-size: 36px;
-//   //       width: 220px;
-//   //       height: 72px;
-//   //     }
-
-//   //     @include onDesktop {
-//   //       width: 170px;
-//   //     }
-//   //   }
-//   // }
-//   &__background {
-//     // position: absolute;
-//     // top: 0;
-//     // right: 0;
-//     @include respGrid;
-//     z-index: -1;
-//     grid-column: 1 / -1;
-//     width: 320px;
-//     height: 300px;
-//     @include onTablet {
-//       grid-column: 4 / -1;
-//       width: 374px;
-//       height: 384px;
-//     }
-
-//     @include onDesktop {
-//       grid-column: 6 / -1;
-//       height: 655px;
-//       width: 725px;
-//     }
-//     background-image: url(../images/museum.png);
-//     background-position: center;
-//     @include onTablet {
-//       background-position: right;
-//     }
-//     background-repeat: no-repeat;
-//     background-size: cover;
-//     &--top-bar {
-//       display: flex;
-//       align-items: center;
-//       @include respGrid;
-
-//       &--icon-menu {
-//         grid: 1 / 1;
-//         display: block;
-//         width: 24px;
-//         height: 24px;
-//         background-image: url(../images/menu.svg);
-//       }
-
-//       &--logo {
-//         grid-column: 1 / 2;
-//         @include onTablet {
-//           grid-column: 4 / 5;
-//         }
-//         @include onDesktop {
-//           grid-column: 6 / 7;
-//         }
-//         display: block;
-//         font-weight: 700;
-//         font-size: 30px;
-//         line-height: 100%;
-//         color: black;
-//         text-decoration: none;
-//         text-align: center;
-//         text-transform: uppercase;
-//         width: 55px;
-//         height: 61px;
-
-//         @include onTablet {
-//           font-size: 36px;
-//           width: 220px;
-//           height: 72px;
-//         }
-
-//         @include onDesktop {
-//           width: 170px;
-//         }
-//       }
-//   }
-//   &__menu {
-//     display: flex;
-//     flex-direction: column;
-//     max-width: 470px;
-
-//     &--title {
-//       padding-top: 149px;
-//       padding-bottom: 89px;
-//       font-weight: 700;
-//       font-size: 72px;
-//       line-height: 120%;
-//       text-transform: uppercase;
-//     }
-
-//     &--buy-tickets {
-//       // display: flex;
-//       // justify-content: right;
-
-//       display: flex;
-//       width: 270px;
-//       align-self: center;
-
-//       @include onTablet {
-//         align-self: flex-start;
-//       }
-
-//       @include onDesktop {
-//         align-self: flex-end;
-//       }
-//     }
-
-//       .green-button {
-//         display: flex;
-//         justify-content: center;
-//         align-items: center;
-//         box-sizing: border-box;
-//         width: 269px;
-//         height: 70px;
-//         background-color: white;
-//         border: 1px solid $green;
-
-//         font-weight: 500;
-//         font-size: 16px;
-//         line-height: 100%;
-//         color: #0F0E08;
-//         text-transform: uppercase;
-
-//         position: relative;
-//         &::after {
-//           content: "";
-//           width: 70px;
-//           height: 70px;
-//           left: 100%;
-//           top: -1px;
-//           background-color: $green;
-//           background-image: url(../images/go.svg);
-//           background-position: center;
-//           background-repeat: no-repeat;
-//           position: absolute;
-//         }
-//       }
-
-//     &--events {
-//       display: none;
-//       @include onDesktop {
-//         display: inline-block;
-//       }
-
-//       position: relative;
-//       font-weight: 700;
-//       font-size: 14px;
-//       color: #687480;
-//       transform: rotate(-90deg);
-//       left: 0;
-//       padding-left: 20px;
-//       align-self: flex-start;
-//       text-transform: uppercase;
-
-
-//       &::after {
-//         display: block;
-//         position: absolute;
-//         content: "";
-//         width: 70px;
-//         height: 1px;
-//         background-color: $green;
-//         right: 100%;
-//         top: 50%;
-//           }
-//         }
-//       }
-//   }
-// }
-
-
-
-
-
-//     &--events {
-//       text-transform: uppercase;
-//       margin-top: 200px;
-//       display: inline-block;
-//       font-weight: 700;
-//       font-size: 14px;
-//       line-height: 100%;
-//       color: #687480;
-//       transform: rotate(-90deg);
-//     }
-//   }
-// }
-// .header {
-//   padding-top: 15px;
-//   padding-bottom: 318px;
-
-//   @include onTablet {
-//     padding-bottom: 107px;
-//   }
-
-//   &__top {
-//     width: 52%;
-//     display: flex;
-//     justify-content: space-between;
-//     align-items: center;
-//     margin-bottom: 120px;
-//   }
-
-//   &__content {
-//     display: flex;
-//     flex-direction: column;
-//     max-width: 470px;
-
-//   }
-
-//   &__title {
-//     font-family: "Montserrat", Arial, sans-serif;
-//     font-weight: 700;
-//     font-size: 72px;
-//     line-height: 120%;
-//     margin-bottom: 89px;
-//     text-transform: uppercase;
-
-//     @include onTablet {
-//       font-size: 54px;
-//       margin-bottom: 38px;
-//     }
-
-//   }
-
-//   &__button {
-//     display: flex;
-//     width: 270px;
-//     align-self: flex-end;
-
-//     @include onTablet {
-//       align-self: flex-start;
-//     }
-//   }
-
-//   &__btn {
-//     display: flex;
-//     justify-content: center;
-//     align-items: center;
-//     height: 70px;
-//     border: 1px solid $green;
-//     border-right: none;
-//     font-weight: 500;
-//     font-size: 16px;
-//     flex-grow: 1;
-//     color: black;
-//     text-transform: uppercase;
-//   }
-
-//   &__bg {
-//     position: absolute;
-//     top: 0;
-//     right: 0;
-//     z-index: -1;
-//     width: 56%;
-//     height: 655px;
-//     background-image: url(../images/museum.png);
-//     background-position: center;
-//     background-repeat: no-repeat;
-//     background-size: cover;
-
-//     @include onTablet {
-//       width: 48%;
-//       max-height: 384px;
-//     }
-//   }
-
-//   &__events {
-//     position: relative;
-//     font-family: "IBM Plex Sans", Arial, sans-serif;
-//     font-weight: 700;
-//     font-size: 14px;
-//     color: #687480;
-//     transform: rotate(-90deg);
-//     left: -27px;
-//     padding-left: 20px;
-//     align-self: flex-start;
-//     text-transform: uppercase;
-
-//     @include onTablet {
-//       display: none;
-//     }
-
-//     &::after {
-//       display: block;
-//       position: absolute;
-//       content: "";
-//       width: 70px;
-//       height: 1px;
-//       background-color: $green;
-//       right: 100%;
-//       top: 50%;
-//     }
-//   }
-// }
-/*#endregion*/
-
 .header {
   min-width: 300px;
   @include respGrid;
@@ -370,6 +32,7 @@
     }
 
     &-logo {
+      font-family: 'Montserrat', sans-serif;
       font-weight: 700;
       font-size: 30px;
       font-size: 30px;
@@ -438,7 +101,6 @@
 
 
     &__title {
-      font-weight: 700;
       font-size: 45px;
       line-height: 100%;
       text-align: center;
