--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,17 @@
 @import "utils";
 @import "fonts";
 @import "typography";
+@import "./blocks/page.scss";
+@import "./utils/normalize";
+@import "./utils/vars";
+@import "./utils/mixins";
+@import "./blocks/grid.scss";
+@import "./blocks/main.scss";
+@import "./blocks/container.scss";
+@import "./blocks/header.scss";
+@import "./blocks/menu.scss";
+@import "./blocks/icon.scss";
+@import "./blocks/museum.scss";
 
 body {
   background: $c-gray;
