--- a/src/styles/blocks/_events.scss
+++ b/src/styles/blocks/_events.scss
@@ -33,8 +33,21 @@
   }
 
   &__img {
-    grid-column: 1/13;
-    @include size (100%, auto);
+
+    background-image: url("../images/320/04.png");
+    background-repeat: no-repeat;
+    @include size (320px, 386px);
+
+    @media (min-width: 768px) {
+      background-image: url("../images/768/04.png");
+
+      @include size (700px, 390px);
+    }
+
+    @media (min-width: 1280px) {
+      background-image: url("../images/1280/04.png");
+      @include size (1280px, 550px);
+    }
   }
 
   &__name {
