--- a/src/styles/blocks/_main-page.scss
+++ b/src/styles/blocks/_main-page.scss
@@ -1,5 +1,5 @@
 .main-page {
-
+  position: relative;
   &__header {
     display: grid;
     grid-template-columns: repeat(2, 130px);
@@ -163,5 +163,31 @@
       grid-column: 3/5;
 
     }
+  }
+
+  &__arrow {
+    position: absolute;
+    top: 522px;
+    left: 92px;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 100%;
+    text-decoration: none;
+    display: flex;
+    color: #687480;
+
+    transform: rotate(-90deg);
+    @media (max-width: 1279px) {
+      display: none;
+    }
+
+    &::before {
+      content: "";
+      background: #687480;
+      width: 70px;
+      height: 1px;
+      margin: 5px;
+    }
+
   }
 }
