--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,6 +2,9 @@
 @import "fonts";
 @import "blocks/title";
 @import "blocks/text";
+@import "blocks/work-schedule";
+@import "blocks/list";
+@import "blocks/menu";
 @import "blocks/main-page";
 @import "blocks/events";
 @import "blocks/gallery";
