--- a/src/styles/blocks/_footer.scss
+++ b/src/styles/blocks/_footer.scss
@@ -5,7 +5,7 @@
       padding: 0 39px;
     }
     @media (min-width: 1280px) {
-      padding: 0 55px;
+      padding: 15px 55px 0;
     }
   }
 
@@ -40,17 +40,6 @@
     }
   }
 
-  &__work-schedule {
-    grid-column: 1/2;
-    @media (min-width: 768px) {
-      grid-row: 1;
-      grid-column: 2/4;
-    }
-    @media (min-width: 1280px) {
-      grid-column: 3/5;
-    }
-  }
-
   &__contacts {
     margin: 0;
     grid-column: 2/3;
@@ -61,14 +50,6 @@
     }
     @media (min-width: 1280px) {
       grid-column: 5/7;
-    }
-  }
-
-  &__block {
-    display: flex;
-    flex-direction: column;
-    @media (min-width: 768px) {
-      flex-direction: row;
     }
   }
 
@@ -83,21 +64,6 @@
     &--info {
       margin-top: 40px;
     }
-  }
-
-  &__time {
-    font-weight: 600;
-    font-size: 14px;
-    line-height: 150%;
-    margin-right: 5px;
-
-    &:nth-child(2) {
-      margin-top: 20px;
-    }
-  }
-
-  &__arrow {
-    height: 20px;
   }
 
   &__line {
@@ -119,42 +85,53 @@
     }
   }
 
-  &__menu {
-    display: grid;
-    grid-column: 1/3;
-    grid-template-columns: repeat(2, auto);
-    gap: 20px;
+  &__list {
     margin-top: 40px;
+    grid-column: 1/3;
 
     @media (min-width: 768px) {
       grid-template-columns: repeat(2, 210px);
-      margin-top: 64px;
       grid-column: 2/7;
+      margin-top: 64px;
     }
 
     @media (min-width: 1280px) {
       grid-column: 8/13;
-      grid-row: 1;
       margin-top: 0;
     }
   }
 
-  &__menu-item {
+  &__work-schedule {
     grid-column: 1/2;
-    text-decoration: none;
-    color: inherit;
 
-    &:nth-child(even) {
-      grid-column: 2/3;
-    }
-
-    @media (min-width: 1280px) {
+    @media (min-width: 768px) {
       grid-row: 1;
-      &:nth-child(3),
-      &:nth-child(4) {
-        margin-top: 30px;
-      }
+      grid-column: 2/4;
     }
+    @media (min-width: 1280px) {
+      grid-column: 3/5;
+    }
+  }
+
+  &__arrow {
+    grid-column: 2/3;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 20px;
+
+    @include size (50px, 50px);
+    border-radius: 50%;
+    border: 1px solid $c-green;
+    margin-left: 80px;
+
+    @media (min-width: 768px) {
+      display: none;
+    }
+  }
+
+  &__arrow-img {
+    @include size (10px, 12px);
   }
 
   &__copyright {
@@ -172,8 +149,8 @@
       grid-column: 1/7;
       flex-direction: row;
       justify-content: space-between;
-
     }
+
     @media (min-width: 1280px) {
       grid-column: 1/13;
     }
