--- a/src/styles/blocks/_gallery.scss
+++ b/src/styles/blocks/_gallery.scss
@@ -2,10 +2,10 @@
   &__container {
     padding: 0 20px;
     @media (min-width: 768px) {
-      padding: 0 39px;
+      padding: 60px 39px;
     }
     @media (min-width: 1280px) {
-      padding: 0 55px;
+      padding: 60px 55px 0;
     }
   }
 
@@ -21,29 +21,20 @@
     }
   }
 
-  &__slider {
-    display: grid;
-    grid-column: 1/3;
-    justify-content: center;
-    padding-bottom: 50px;
-
-    @media (min-width: 768px) {
-      display: none;
-    }
+  &__p {
+    grid-column: 4/7;
   }
 
-  &__p {
+  &__p,
+  &__p1,
+  &__p2,
+  &__p3,
+  &__p4 {
     @include size (100%, auto);
-    grid-column: 1/3;
-    @media (min-width: 768px) {
-      display: none;
-    }
   }
 
   &__p1 {
-    @media (max-width: 1279px) {
-      display: none;
-    }
+    grid-column: 1/4;
 
     @media (min-width: 1280px) {
       grid-column: 1/4;
