--- a/src/styles/blocks/_subscribe.scss
+++ b/src/styles/blocks/_subscribe.scss
@@ -58,40 +58,46 @@
     }
   }
 
-  &__input {
+  &__form {
     grid-row: 4;
-    grid-column: 1/3;
+    grid-column: 1/4;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    @media (min-width: 768px) {
+      grid-column: 2/5;
+      width: 460px;
+    }
+
+    @media (min-width: 1280px) {
+      grid-column: 4/10;
+
+    }
+  }
+
+  &__input {
     @include size (230px, 50px);
     border: none;
     padding: 20px;
 
     @media (min-width: 768px) {
       @include size (374px, 70px);
-      grid-column: 2/4;
+      margin-right: 16px;
     }
 
     @media (min-width: 1280px) {
       @include size (470px, 70px);
-      grid-column: 4/9;
     }
   }
 
   &__btn {
-    grid-row: 4;
     @include size (50px, 50px);
     border: none;
     background-color: #f14a27;
-    grid-column: 2/4;
-    margin-left: 80px;
 
     @media (min-width: 768px) {
       @include size (70px, 70px);
-      grid-column: 5/9;
-      margin-left: 0;
-    }
-
-    @media (min-width: 1280px) {
-      grid-column: 9/12;
     }
   }
 }
