--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -12,6 +12,9 @@
 @import "./blocks/menu.scss";
 @import "./blocks/icon.scss";
 @import "./blocks/museum.scss";
+@import "./blocks/current-events.scss";
+@import "./blocks/events-item.scss";
+@import "./blocks/romantic.scss";
 
 body {
   background: $c-gray;
