--- a/src/styles/blocks/_gallery.scss
+++ b/src/styles/blocks/_gallery.scss
@@ -2,35 +2,45 @@
   &__container {
     padding: 0 20px;
     @media (min-width: 768px) {
-      padding: 60px 39px;
+      padding: 88px 39px 133px;
     }
     @media (min-width: 1280px) {
-      padding: 60px 55px 0;
+      padding: 200px 55px;
     }
   }
 
   &__title {
+    font-size: 36px;
     font-weight: 700;
     line-height: 100%;
     padding-top: 100px;
+    padding-bottom: 40px;
 
+    @media (min-width: 768px) {
+      font-size: 48px;
+      padding-bottom: 48px;
+    }
     @media (min-width: 1280px) {
       grid-column: 1/12;
-      padding-top: 200px;
-      font-size: 48px;
+      padding-bottom: 56px;
     }
   }
 
   &__p {
     grid-column: 4/7;
+    display: none;
+    @media (min-width: 768px) {
+      display: block;
+    }
+    @media (min-width: 1280px) {
+      display: none;
+    }
+
   }
 
   &__p,
-  &__p1,
-  &__p2,
-  &__p3,
-  &__p4 {
-    @include size (100%, auto);
+  &__p1 {
+    @include size (340px, 543px);
   }
 
   &__p1 {
@@ -72,6 +82,5 @@
 
   &__box {
     grid-column: 1/3;
-    padding: 0 0 200px;
   }
 }
