add decorative element in header

--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -115,6 +115,7 @@
 
     @include onDesktop {
       margin-top: 90px;
+      margin-left: 150px;
     }
   }
 
@@ -147,5 +148,18 @@
     display: grid;
     flex-grow: 1;
     align-content: center;
+  }
+
+  &__decorative {
+    display: none;
+    position: absolute;
+    left: 0;
+    bottom: 56px;
+
+    transform: rotate(-90deg);
+
+    @include onDesktop {
+      display: block;
+    }
   }
 }
