--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -9,6 +9,7 @@
 @import "./blocks/container.scss";
 @import "./blocks/top-actions.scss";
 @import "./blocks/menu.scss";
+@import "./blocks/decorative.scss";
 
 h1 {
   margin: 0;
