add button link backgraund  style

--- a/src/styles/blocks/art-museum.scss
+++ b/src/styles/blocks/art-museum.scss
@@ -109,7 +109,10 @@
     font-weight: 700;
     font-size: 14px;
     line-height: 100%;
+    border: none;
     color: #687480;
+    text-decoration: none;
+    background-color: #fff;
     transform: rotate(-90deg);
 
     @include onDesktop {
