--- a/src/styles/blocks/nav.scss
+++ b/src/styles/blocks/nav.scss
@@ -23,6 +23,10 @@
     line-height: 100%;
     color: $nav-main-color;
 
+    &:hover {
+      color: rgb(0, 135, 23);
+    }
+
     @include onDesktop {
       font-size: 22px;
     }
