--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -1,9 +1,10 @@
 .header {
   margin-bottom: 70px;
-  background-image: url(../images/header-backgraund.png);
+  background-image: url(../images/header-backgraund-1.png);
   background-position: top;
-  background-size: 100% 300px;
+  background-size: 100%,300px,cover;
   background-repeat: no-repeat;
+
 
   @include onTablet {
     background-size: 374px 384px;
