--- a/src/styles/blocks/_main-page.scss
+++ b/src/styles/blocks/_main-page.scss
@@ -132,8 +132,7 @@
     text-decoration: none;
 
     &:hover {
-      background-color: $c-green;
-      color: #fff;
+      color: #3333f2;
     }
 
     &::after {
