--- a/src/styles/blocks/_menu.scss
+++ b/src/styles/blocks/_menu.scss
@@ -5,7 +5,7 @@
   left: 0;
 
   transform: translateX(100%);
-  transition: transform 800ms;
+  transition: transform 300ms;
 
   padding: 27px 25px;
   background-color: $c-green;
@@ -89,6 +89,8 @@
   }
 
   &__info {
+    margin: 25px 0;
+
     @media (min-width: 768px) {
       grid-column: 2/3;
     }
