--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -44,3 +44,22 @@ body {
     min-width: 1280px;
   }
 }
+
+.body.no-active {
+  &::after {
+    content: "";
+    position: fixed;
+    top: 400px;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 9999;
+    @media (min-width: 768px) {
+      top: 225px;
+    }
+    @media (min-width: 1280px) {
+      top: 233px;
+    }
+  }
+}
