--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -1,8 +1,9 @@
 .menu {
-  height: 399px;
   background-color: $green;
-  padding-top: 27px;
   font-family: 'IBM Plex Sans', sans-serif;
+  padding-bottom: 27px;
+
+
   @include onTablet {
     padding-top: 40px;
     height: 225px;
