--- a/src/styles/header/icon.scss
+++ b/src/styles/header/icon.scss
@@ -23,10 +23,10 @@
   }
 
   &--menu {
-    background-image: url(../images/menu.svg);
+    background-image: url(../images/icons/menu.svg);
   }
 
   &--close {
-    background-image: url(../images/close.svg);
+    background-image: url(../images/icons/close.svg);
   }
 }
