--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -3,3 +3,7 @@ $tablet-width: 640px;
 $desktop-width: 1280px;
 
 $green: #1a5a4c;
+$border-green: #1a5a4c80;
+$orange: #f14a27;
+$page-black: #0f0e08;
+$light-gray: #687480;
