--- a/src/styles/utils/normalize.scss
+++ b/src/styles/utils/normalize.scss
@@ -17,6 +17,18 @@ p {
   padding: 0;
 }
 
+h1 {
+  color: black
+}
+
+h2,
+h3,
+h4,
+h5,
+h6 {
+  color: $page-black;
+}
+
 ul {
   list-style: none;
   margin: 0;
@@ -24,6 +36,7 @@ ul {
 }
 
 a {
+  color: $page-black;
   text-decoration: none;
   cursor: pointer;
 }
