--- a/src/styles/blocks/main/nav.scss
+++ b/src/styles/blocks/main/nav.scss
@@ -1,7 +1,9 @@
 .nav {
   grid-column: 1 / -1;
   padding-bottom: 24px;
+  padding-top: 27px;
   @include onTablet {
+    padding-top: 0;
     padding-bottom: 0;
     grid-column: 1 / 3;
   }
@@ -40,11 +42,12 @@
     @include onDesktop {
       font-size: 22px;
     }
+
+    @include hover (scale, 1.3);
   }
 }
 
 .schedule {
-  max-height: 145px;
   grid-column: 1 / -1;
   grid-row: 2;
   padding-top: 24px;
@@ -59,8 +62,11 @@
   border-top: 1px solid rgba(255, 255, 255, 0.5);
   position: relative;
 
+  &__title {
+    color: white;
+  }
+
   @include onTablet {
-    margin-top: 0;
     padding-top: 0;
     border-top: none;
 
