--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -9,11 +9,14 @@
 
   &__body {
     min-width: 316px;
+    max-width: 1920px;
+    position: relative;
+    @include onWide {
+      margin: 0 auto;
+    }
   }
 
   &__menu {
-    // opacity: 0;
-    // pointer-events: none;
     display: none;
     position: fixed;
     top: 0;
@@ -29,10 +32,11 @@
     &:target {
       z-index: 2;
       display: block;
+      box-shadow: 0px 0px 0px 100vh rgba(24,24,26,0.5);
+
       @include onTablet {
         display: grid;
       }
-
 
       transform: translateX(0);
     }
