--- a/src/styles/header/header.scss
+++ b/src/styles/header/header.scss
@@ -8,7 +8,7 @@
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
-    background-image: url(../images/museum.png);
+    background-image: url(../images/background/museum.jpg);
 
     display: flex;
     justify-content: center;
@@ -20,6 +20,7 @@
       grid-column: 4 / -1;
       background-size: cover;
       height: 384px;
+      justify-content: left;
     }
 
     @include onDesktop {
@@ -27,22 +28,11 @@
       height: 655px;
     }
 
-    @include onTablet {
-      justify-content: left;
-    }
-
     &-logo {
-      font-family: 'Montserrat', sans-serif;
-      font-weight: 700;
-      font-size: 30px;
-      font-size: 30px;
       padding-top: 9px;
       @include onTablet {
         padding-top: 15px;
       }
-      line-height: 100%;
-      text-align: center;
-      color: #0F0E08;
       width: 55px;
       height: 61px;
 
@@ -51,12 +41,9 @@
         transform: scale(1.4);
       }
 
-
-
       @include onTablet {
         width: 220px;
         height: 72px;
-        // margin-right: 21%;
         font-size: 36px;
 
         grid-column: 5 / 6;
@@ -64,8 +51,6 @@
 
       @include onDesktop {
         width: 170px;
-        // margin-inline: 43%;
-
         grid-column: 6 / 7;
       }
 
@@ -88,6 +73,7 @@
     gap: 20px;
 
     @include onTablet {
+      align-items: flex-start;
       gap: 38px;
       grid-row: 1;
       grid-column: 1 / 3;
@@ -99,13 +85,12 @@
       padding-top: 149px;
     }
 
-
     &__title {
       font-size: 45px;
       line-height: 100%;
       text-align: center;
       text-transform: uppercase;
-      width: 280px;
+      width: 100%;
       @include onTablet {
         text-align: left;
         width: 340px;
@@ -121,7 +106,7 @@
 
     &__buy-tickets {
       width: 230px;
-
+      font-family: 'IBM Plex Sans';
       @include onTablet {
         width: 200px;
         align-self: flex-start;
@@ -143,25 +128,22 @@
         }
 
         padding-left: 80px;
-
         background-color: white;
         border: 1px solid $green;
 
         font-weight: 500;
         font-size: 14px;
         line-height: 100%;
-        color: #0F0E08;
+        color: $page-black;
         text-transform: uppercase;
-
         position: relative;
+
         &::after {
           content: "";
-          width: var(--size);
-          height: var(--size);
+          @include btnSize;
           left: 100%;
-          top: -1px;
           background-color: $green;
-          background-image: url(../images/go.svg);
+          background-image: url(../images/icons/go.svg);
           background-position: center;
           background-repeat: no-repeat;
           position: absolute;
@@ -194,13 +176,14 @@
           display: inline-block;
         }
 
-
+        font-family: 'IBM Plex Sans';
+        font-weight: 700;
         line-height: 200%;
         margin-top: -34px;
         position: relative;
         font-weight: 700;
         font-size: 14px;
-        color: #687480;
+        color: $light-gray;
         transform: rotate(-90deg);
         align-self: flex-start;
         text-transform: uppercase;
