--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,14 +1,18 @@
 @import "utils";
-@import "fonts";
 @import "./utils/normalize";
 @import "typography";
 @import "./utils/vars";
+@import "./blocks/logo";
 @import "./blocks/container";
-@import "./blocks/icon.scss";
 @import "./blocks/page.scss";
 
+@import "./header/icon";
 @import "./header/header";
 @import "./blocks/menu";
-@import "./blocks/nav";
-@import "./blocks/main";
-@import "./blocks/section";
+@import "./blocks/main/nav";
+@import "./blocks/main/main";
+@import "./blocks/main/section";
+@import "./blocks/main/gallery";
+@import "./blocks/main/subscribe";
+@import "./blocks/footer/footer";
+
