--- a/src/styles/blocks/main/gallery.scss
+++ b/src/styles/blocks/main/gallery.scss
@@ -10,7 +10,6 @@
   }
 }
 
-
 .picture {
   .wrapper {
     @include paddingInline;
@@ -76,11 +75,11 @@
     @include onTablet {
       grid-row: 2;
       grid-column: 1 / 5;
-      background-position-x: 0px;
+      background-position-x: 0;
       height: 360px;
     }
     @include onDesktop {
-      background-position-x: 0px;
+      background-position-x: 0;
       grid-column: 1 / 9;
     }
   }
