--- a/src/styles/blocks/main/subscribe.scss
+++ b/src/styles/blocks/main/subscribe.scss
@@ -27,7 +27,7 @@
 
     &__caption {
       padding-bottom: 50px;
-      font-family: 'IBM Plex Sans';
+      font-family: "IBM Plex Sans", Arial, sans-serif;
       font-weight: 400;
       font-size: 18px;
       line-height: 100%;
@@ -43,7 +43,7 @@
     &__wrapper {
       display: flex;
       justify-content: center;
-      gap: 0px;
+      gap: 0;
       @include onTablet {
         gap: 16px;
       }
@@ -65,7 +65,7 @@
       }
 
       &::placeholder {
-        font-family: 'Montserrat';
+        font-family: "Montserrat", sans-serif;
         font-weight: 400;
         font-size: 14px;
         line-height: 100%;
@@ -80,4 +80,3 @@
     }
   }
 }
-
