--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -32,7 +32,7 @@
     &:target {
       z-index: 2;
       display: block;
-      box-shadow: 0px 0px 0px 100vh rgba(24,24,26,0.5);
+      box-shadow: 0 0 0 100vh rgba(24,24,26,0.5);
 
       @include onTablet {
         display: grid;
