--- a/src/styles/header/header.scss
+++ b/src/styles/header/header.scss
@@ -97,7 +97,7 @@
         font-size: 54px;
         line-height: 120%;
       }
-      @include onDesktop{
+      @include onDesktop {
         font-size: 72px;
       }
 
@@ -106,7 +106,7 @@
 
     &__buy-tickets {
       width: 230px;
-      font-family: 'IBM Plex Sans';
+      font-family: "IBM Plex Sans", sans-serif;
       @include onTablet {
         width: 200px;
         align-self: flex-start;
@@ -176,12 +176,11 @@
           display: inline-block;
         }
 
-        font-family: 'IBM Plex Sans';
+        font-family: "IBM Plex Sans", sans-serif;
         font-weight: 700;
         line-height: 200%;
         margin-top: -34px;
         position: relative;
-        font-weight: 700;
         font-size: 14px;
         color: $light-gray;
         transform: rotate(-90deg);
