--- a/src/styles/utils/normalize.scss
+++ b/src/styles/utils/normalize.scss
@@ -18,7 +18,7 @@ p {
 }
 
 h1 {
-  color: black
+  color: black;
 }
 
 h2,
@@ -39,4 +39,10 @@ a {
   color: $page-black;
   text-decoration: none;
   cursor: pointer;
+}
+
+input {
+  &:focus {
+    outline: none;
+  }
 }
