--- a/src/styles/blocks/footer/footer.scss
+++ b/src/styles/blocks/footer/footer.scss
@@ -1,10 +1,10 @@
 .footer {
-  font-family: 'IBM Plex Sans';
+  font-family: "IBM Plex Sans", Arial, sans-serif;
   &__content {
     @include respGrid;
     @include paddingInline;
     padding-top: 50px;
-    }
+  }
 
   &__logo {
     font-size: 36px;
@@ -154,7 +154,7 @@
       justify-content: space-between;
     }
     &--caption {
-      font-family: 'IBM Plex Sans';
+      font-family: "IBM Plex Sans", sans-serif;
       font-weight: 300;
       font-size: 12px;
       line-height: 140.62%;
