--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -1,13 +1,13 @@
 .menu {
   background-color: $green;
-  font-family: 'IBM Plex Sans', sans-serif;
+  font-family: "IBM Plex Sans", sans-serif;
   padding-bottom: 27px;
-
 
   @include onTablet {
     padding-top: 40px;
     height: 225px;
   }
+
   @include onDesktop {
     height: 233px;
   }
@@ -21,5 +21,3 @@
     left: 0;
   }
 }
-
-
