--- a/src/styles/utils/normalize.scss
+++ b/src/styles/utils/normalize.scss
@@ -39,6 +39,9 @@ a {
   color: $page-black;
   text-decoration: none;
   cursor: pointer;
+
+  @include hover(color, rgb(255, 55, 0));
+
 }
 
 input {
