fix mismatch and compress img

--- a/src/styles/blocks/art-museum.scss
+++ b/src/styles/blocks/art-museum.scss
@@ -53,6 +53,7 @@
 }
 
 .button {
+  position: relative;
   &__link {
     box-sizing: border-box;
     display: flex;
@@ -83,7 +84,6 @@
   }
 
   &__arrow {
-    position: relative;
     width: 50px;
     height: 50px;
     background-image: url(../images/icon/icon-arrow.svg);
@@ -102,8 +102,9 @@
   &__events {
     display: none;
     position: absolute;
-    left: 40px;
-    bottom: 200px;
+    top: 50px;
+    right: 160%;
+    bottom: 0;
 
     @include pageIBMPlex;
     font-weight: 700;
