--- a/src/styles/blocks/classicism.scss
+++ b/src/styles/blocks/classicism.scss
@@ -19,23 +19,29 @@
   &__backgraund {
     width: 100vw;
     height: 210px;
-    background-image: url(../images/classicism-bg.png);
-    background-position: 100%;
-    background-size: cover;
+    background-image: url(../images/classicism/classicism-photo.png);
+    background-position: center;
+    background-size: 100% 210px;
     background-repeat: no-repeat;
 
     @include onTablet {
       height: 390px;
+      background-size: 100% 290px;
+
     }
 
     @include onDesktop {
       height: 550px;
+      background-size: 100% 550px;
     }
   }
 
   &__card {
     box-sizing: border-box;
     position: absolute;
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
     top: 153px;
     margin: 0;
     padding: 20px;
@@ -60,9 +66,15 @@
 
   &__info {
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
+    column-gap: 20px;
     margin-bottom: 20px;
+
+    @include onTablet {
+      justify-content: start;
+      column-gap: 130px;
+    }
   }
 
   &__subtitle {
