--- a/src/styles/blocks/galery.scss
+++ b/src/styles/blocks/galery.scss
@@ -29,7 +29,7 @@
     }
 
     &--1 {
-      background-image: url(../images/galery/img-1.png);
+      background-image: url(../images/galery/galary-photo-1.png);
 
       @include onDesktop {
         grid-column: 1 / span 4;
@@ -38,7 +38,7 @@
     }
 
     &--2 {
-      background-image: url(../images/galery/img-2.png);
+      background-image: url(../images/galery/galary-photo-2.png);
       display: none;
 
       @include onTablet {
@@ -52,7 +52,7 @@
     }
 
     &--3 {
-      background-image: url(../images/galery/img-3.png);
+      background-image: url(../images/galery/galaru-photo-3.png);
       display: none;
 
       @include onDesktop {
@@ -63,7 +63,7 @@
     }
 
     &--4 {
-      background-image: url(../images/galery/img-4.png);
+      background-image: url(../images/galery/galary-photo-4.png);
       display: none;
 
       @include onDesktop {
