--- a/src/styles/blocks/subscription.scss
+++ b/src/styles/blocks/subscription.scss
@@ -4,7 +4,7 @@
     width: 100vw;
     margin-bottom: 50px;
     padding-inline: 20px;
-    background-image: url(../images/subscription.png);
+    background-image: url(../images/subscription/sub-photo.png);
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
