--- a/src/styles/header/header.scss
+++ b/src/styles/header/header.scss
@@ -105,18 +105,23 @@
     }
 
     &__buy-tickets {
-      width: 230px;
-      font-family: "IBM Plex Sans", sans-serif;
+      width: 280px;
+      align-self: center;
       @include onTablet {
-        width: 200px;
+        width: 270px;
         align-self: flex-start;
       }
-
       @include onDesktop {
         align-self: flex-end;
       }
 
       &--button {
+        width: 230px;
+        font-family: "IBM Plex Sans", sans-serif;
+        @include onTablet {
+          width: 200px;
+
+        }
         display: flex;
         align-items: center;
         box-sizing: border-box;
@@ -130,7 +135,6 @@
         padding-left: 80px;
         background-color: white;
         border: 1px solid $green;
-
         font-weight: 500;
         font-size: 14px;
         line-height: 100%;
