fixed crossorigin issues

--- a/src/styles/blocks/main/section.scss
+++ b/src/styles/blocks/main/section.scss
@@ -8,7 +8,7 @@
 }
 
 .events {
-  font-family: 'IBM Plex Sans';
+  font-family: "IBM Plex Sans", Arial, sans-serif;
   display: flex;
   flex-direction: column;
   gap: 60px;
@@ -78,7 +78,6 @@
       padding-top: 0;
     }
 
-
     &-type {
       @include eventType;
       width: 129px;
@@ -119,7 +118,7 @@
     font-weight: 300;
     font-size: 16px;
     line-height: 150%;
-    color: #4E4E4E;
+    color: #4e4e4e;
 
     @include onTablet {
       max-width: 470px;
@@ -152,12 +151,10 @@
   &__info {
     background-color: #fff;
     width: 100%;
-    box-shadow: 0px 2px 0px rgba(26, 90, 76, 0.25);
-
-    grid-column: 1 / -1;;
+    box-shadow: 0 2px 0 rgba(26, 90, 76, 0.25);
+    grid-column: 1 / -1;
     padding-bottom: 20px;
     transform: translateY(105%);
-
 
     @include onTablet {
       padding: 45px 50px;
@@ -203,18 +200,12 @@
       }
     }
 
-
-
     &--title {
       @include subtitle;
       text-align: center;
-
       @include onTablet {
         text-align: left;
       }
     }
-
   }
 }
-
-
