--- a/src/styles/blocks/_footer.scss
+++ b/src/styles/blocks/_footer.scss
@@ -16,6 +16,12 @@
     font-size: 36px;
     text-decoration: none;
     color: #0f0e08;
+    @include size (62px, 72px);
+    transition: transform 0.5s ease;
+
+    &:hover {
+      transform: scale(1.1);
+    }
   }
 
   &__icons {
@@ -35,9 +41,16 @@
   &__fb {
     @include size (24px, 24px);
     text-decoration: none;
+    transition: transform 0.5s ease;
+
     &:nth-child(1) {
       margin-right: 20px;
     }
+
+    img:hover {
+      transform: scale(1.1);
+    }
+
   }
 
   &__contacts {
@@ -50,6 +63,23 @@
     }
     @media (min-width: 1280px) {
       grid-column: 5/7;
+    }
+  }
+
+  &__links {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+  }
+
+  &__link {
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 140.62%;
+    color: inherit;
+    text-decoration-line: none;
+    &:hover {
+      color: #f14a27;
     }
   }
 
