--- a/src/styles/blocks/_gallery.scss
+++ b/src/styles/blocks/_gallery.scss
@@ -80,6 +80,18 @@
     }
   }
 
+  &__p,
+  &__p1,
+  &__p2,
+  &__p3,
+  &__p4 {
+    transition: transform 0.5s ease;
+
+    &:hover {
+      transform: scale(1.1);
+    }
+  }
+  
   &__box {
     grid-column: 1/3;
   }
