--- a/src/styles/blocks/_list.scss
+++ b/src/styles/blocks/_list.scss
@@ -16,6 +16,10 @@
       grid-column: 2/3;
     }
 
+    &:hover {
+      color: #f14a27;
+    }
+
     @media (min-width: 1280px) {
       grid-row: 1;
       &:nth-child(3),
