--- a/src/styles/blocks/_main-page.scss
+++ b/src/styles/blocks/_main-page.scss
@@ -1,5 +1,6 @@
 .main-page {
   position: relative;
+
   &__header {
     display: grid;
     grid-template-columns: repeat(2, 130px);
@@ -53,6 +54,12 @@
 
     @media (min-width: 1280px) {
       grid-column: 7/13;
+    }
+    
+    transition: transform 0.5s ease;
+
+    &:hover {
+      transform: scale(1.1);
     }
   }
 
@@ -117,8 +124,8 @@
 
   &__btn {
     display: flex;
-    justify-content: center;
     align-items: center;
+    justify-content: center;
     position: relative;
 
     @include size (230px, 50px);
@@ -130,10 +137,6 @@
     text-transform: uppercase;
 
     text-decoration: none;
-
-    &:hover {
-      color: #3333f2;
-    }
 
     &::after {
       content: "";
@@ -150,17 +153,18 @@
 
       @media (min-width: 768px) {
         @include size (70px, 70px);
+        right: -70px;
       }
     }
 
     @media (min-width: 768px) {
       @include size (200px, 70px);
+      margin-right: 25px;
     }
 
     @media (min-width: 1280px) {
       margin-top: 240px;
       grid-column: 3/5;
-
     }
   }
 
