--- a/src/styles/blocks/_subscribe.scss
+++ b/src/styles/blocks/_subscribe.scss
@@ -1,78 +1,60 @@
 .subscribe {
-  margin-bottom: 32px;
+  background-image: url("../images/320/06.png");
+  background-repeat: no-repeat;
+  background-size: cover;
 
-  &__container {
-    grid-template-rows: repeat(6, auto);
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 50px;
 
-    background-image: url("../images/320/06.png");
-    background-repeat: no-repeat;
-    @include size (320px, 386px);
+  @include size (100vw, 100vh);
 
+  @media (min-width: 768px) {
+    background-image: url("../images/768/06.png");
+  }
+
+  @media (min-width: 1280px) {
+    background-image: url("../images/1280/06.png");
+
+  }
+
+  &__contain {
     color: #fff;
-
-    @media (min-width: 768px) {
-      background-image: url("../images/768/06.png");
-
-      @include size (768, 380px);
-    }
-
-    @media (min-width: 1280px) {
-      background-image: url("../images/1280/06.png");
-      @include size (1280px, 550px);
-    }
   }
 
   &__title {
     font-size: 36px;
-    grid-column: 1/3;
     text-align: center;
-    margin: 88px 0 0;
-    grid-row: 2;
 
     @media (min-width: 768px) {
-      grid-column: 1/9;
       font-size: 48px;
-
-    }
-
-    @media (min-width: 1280px) {
-      grid-column: 1/12 ;
     }
   }
 
   &__text {
     font-size: 18px;
     text-align: center;
-    margin: 0;
-    grid-column: 1/3;
-    grid-row: 3;
-
+    width: 80vw;
+    margin-top: 20px;
     @media (min-width: 768px) {
-      grid-column: 1/9;
-    }
-
-    @media (min-width: 1280px) {
-      grid-column: 1/12 ;
+      margin-top: 16px;
     }
   }
 
   &__form {
-    grid-row: 4;
-    grid-column: 1/4;
     display: flex;
     justify-content: center;
     align-items: center;
-
+    margin-top: 50px;
     @media (min-width: 768px) {
-      grid-column: 2/5;
-      width: 460px;
+      margin-top: 64px;
     }
 
     @media (min-width: 1280px) {
-      grid-column: 4/10;
-
+      margin-top: 72px;
     }
   }
 
@@ -80,10 +62,8 @@
     @include size (230px, 50px);
     border: none;
     padding: 20px;
-
     @media (min-width: 768px) {
       @include size (374px, 70px);
-      margin-right: 16px;
     }
 
     @media (min-width: 1280px) {
@@ -92,12 +72,19 @@
   }
 
   &__btn {
+    margin: 0;
+    padding: 0;
     @include size (50px, 50px);
     border: none;
     background-color: #f14a27;
 
     @media (min-width: 768px) {
       @include size (70px, 70px);
+      margin-left: 16px;
+    }
+
+    @media (min-width: 1280px) {
+      margin-left: 30px;
     }
   }
 }
