--- a/src/styles/blocks/_main-page.scss
+++ b/src/styles/blocks/_main-page.scss
@@ -55,7 +55,7 @@
     @media (min-width: 1280px) {
       grid-column: 7/13;
     }
-    
+
     transition: transform 0.5s ease;
 
     &:hover {
@@ -191,6 +191,13 @@
       height: 1px;
       margin: 5px;
     }
+    transition: transform 0.5s ease;
 
+    &:hover {
+      color: #f14a27;
+      &::before {
+        background: #f14a27;
+      }
+    }
   }
 }
