--- a/src/styles/blocks/_main-page.scss
+++ b/src/styles/blocks/_main-page.scss
@@ -135,6 +135,7 @@
     font-size: 16px;
     line-height: 100%;
     text-transform: uppercase;
+    color: inherit;
 
     text-decoration: none;
 
