--- a/src/styles/blocks/_gallery.scss
+++ b/src/styles/blocks/_gallery.scss
@@ -9,6 +9,12 @@
     }
   }
 
+  &__static {
+    display: none;
+    @media (min-width: 1280px) {
+      display: block;
+    }
+  }
   &__title {
     font-size: 36px;
     font-weight: 700;
@@ -28,7 +34,6 @@
 
   &__p {
     grid-column: 4/7;
-    display: none;
     @media (min-width: 768px) {
       display: block;
     }
@@ -44,19 +49,23 @@
   }
 
   &__p1 {
+    display: none;
     grid-column: 1/4;
 
     @media (min-width: 1280px) {
+      display: block;
       grid-column: 1/4;
     }
   }
 
   &__p2 {
+    display: none;
     @media (max-width: 1279px) {
       display: none;
     }
 
     @media (min-width: 1280px) {
+      display: block;
       grid-column: 5/13;
     }
   }
@@ -71,11 +80,9 @@
   }
 
   &__p4 {
-    @media (max-width: 1279px) {
-      display: none;
-    }
-
+    display: none;
     @media (min-width: 1280px) {
+      display: block;
       grid-column: 9/13;
     }
   }
@@ -90,8 +97,9 @@
     &:hover {
       transform: scale(1.1);
     }
+
   }
-  
+
   &__box {
     grid-column: 1/3;
   }
