--- a/src/styles/blocks/_main-page.scss
+++ b/src/styles/blocks/_main-page.scss
@@ -67,7 +67,6 @@
     grid-column: 1/3;
     grid-row: 1;
     @include size (320px, 300px);
-    z-index: 0;
     margin-bottom: 20px;
 
     @media (min-width: 768px) {
@@ -136,6 +135,12 @@
     line-height: 100%;
     text-transform: uppercase;
     color: inherit;
+    transition: 0.5s ease;
+
+    &:hover {
+      box-shadow: 5px 5px 15px rgba(21, 23, 22, 0.25);
+      color: $c-green;
+    }
 
     text-decoration: none;
 
